--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="q-app">
     <template v-if='preview'>
     </template>
-
+    <p>hello</p>
     <!-- <square :square='square' :options='filterSquare'></square>  -->
     <!-- <square :square='square' :options='filterSquare' @backsquare='keepsquare($event)'></square>-->
     <!-- <categories :filtercategory='categories'></categories> -->
