--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 <body>
   <div id="q-app">
-    <square :square='square' :options='filterSquare'></square>
-    <categories :filtercategory='categories'></categories>
-    <services :selected='selected' :square='square.val' :columns='columns' :rows='rows' :filtercategory='categories.val'></services>
-    <payments :filterpayment='payments' :columnspayment='columnspayment' :rowspayment='rowspayment' :selectedpayment='selectedpayment'></payments>
-    <additional :columnspayment='columnsadditional' :rowspayment='rowsadditional' :selectedpayment='selectedadditional'></additional>
+    <!-- <square :square='square' :options='filterSquare'></square> -->
+    <!-- <categories :filter='categories'></categories> -->
+    <!-- <services :selected='selected' :columns='columns' :rows='rows' :filter='categories.val' :square='square.val'></services> -->
+    <payments :selected='selectedpayment' :columns='columnspayment' :rows='rowspayment' :filter='payments'></payments>
+    <!-- <additional :columns='columnsadditional' :rows='rowsadditional' :selected='selectedadditional'></additional> -->
+    <documents :columns='columnsdocuments' :rows='rowsdocuments' :selected='selecteddocuments' :filter='payments'></documents>
   </div>
   
   <!-- Import Vue -->
@@ -40,6 +41,7 @@
   <script src="./components/services.js"></script>
   <script src="./components/payments.js"></script>
   <script src="./components/additional.js"></script>
+  <script src="./components/documents.js"></script>
 
   <!-- Mount app -->
   <script>const mountedapp = app.mount('#q-app')</script>
