rename al files to vue extansion

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
   <script src="./components/data.js"></script>
 
   <!-- Import components -->
-  <script src="./components/global.js"></script>
-  <script src="./components/offers.js"></script>
-  <script src="./components/square.js"></script>
-  <script src="./components/categories.js"></script>
-  <script src="./components/services.js"></script>
-  <script src="./components/payments.js"></script>
-  <script src="./components/additional.js"></script>
-  <script src="./components/documents.js"></script>
+  <script src="./components/global.vue"></script>
+  <script src="./components/offers.vue"></script>
+  <script src="./components/square.vue"></script>
+  <script src="./components/categories.vue"></script>
+  <script src="./components/services.vue"></script>
+  <script src="./components/payments.vue"></script>
+  <script src="./components/additional.vue"></script>
+  <script src="./components/documents.vue"></script>
 
   <!-- Mount app -->
   <script>const mountedapp = app.mount('#q-app')</script>
