--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
   </div>
   
   <script>
-    function saveDataJS(v){
-      console.log(v)
+    function saveDataJS(){
+      let jsdata = JSON.stringify({view, model});
+      google.script.run.withSuccessHandler(finishSaving).saveDataGS(jsdata);
+    }
+
+    function finishSaving(message){
+      google.script.host.close();
     }
   </script>
 
@@ -43,14 +48,14 @@
   <script src="./components/data.js"></script>
 
   <!-- Import components -->
-  <script src="./components/global.vue"></script>
-  <script src="./components/offers.vue"></script>
-  <script src="./components/square.vue"></script>
-  <script src="./components/categories.vue"></script>
-  <script src="./components/services.vue"></script>
-  <script src="./components/payments.vue"></script>
-  <script src="./components/additional.vue"></script>
-  <script src="./components/documents.vue"></script>
+  <script src="./components/global.js"></script>
+  <script src="./components/offers.js"></script>
+  <script src="./components/square.js"></script>
+  <script src="./components/categories.js"></script>
+  <script src="./components/services.js"></script>
+  <script src="./components/payments.js"></script>
+  <script src="./components/additional.js"></script>
+  <script src="./components/documents.js"></script>
 
   <!-- Mount app -->
   <script>const mountedapp = app.mount('#q-app')</script>
