--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- <example :selected='selectedadditional' :columns='columnsadditional' :rows='rowsadditional'></example> -->
       <square :square='square' :options='filterSquare'></square>
       <categories :filter='categories'></categories>
-      <services :selected='selected' :columns='columns' :rows='rows' :filter='categories.val' :square='square.val' :selectedprofile='selectedprofile'></services>
+      <services :selected='selected' :columns='columns' :rows='rows' :filter='categories.val' :square='square' :selectedprofile='selectedprofile'></services>
       <payments :selected='selectedpayment' :columns='columnspayment' :rows='rowspayment' :filter='payments'></payments>
       <additional :selected='selectedadditional' :columns='columnsadditional' :rows='rowsadditional'></additional>
       <documents :columns='columnsdocuments' :rows='rowsdocuments' :selected='selecteddocuments' :filter='payments'></documents>
