--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
   <script src="./components/payments.js"></script>
   <script src="./components/additional.js"></script>
   <script src="./components/documents.js"></script>
-  
+  <script src="./components/datepicker.js"></script>
+
   <!-- Mount app -->
   <script>const vm = app.mount('#q-app')</script>
   
